# Interactive-Izhikevich-Model

./: README.md  interactive_izhikevich.ipynb  pyproject.toml
