[tool.poetry]
name = "interactive"
version = "0.1.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
jupyterlab = "^2.2.9"
voila = "^0.2.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
